--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -67,6 +67,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Mae ar Signal angen caniatâd Lleoliad er mwyn atodi gwybodaeth lleoliad, ond fe\'i rwystrwyd yn barhaol. Ewch i ddewislen gosodiadau\'r ap, dewis "Caniatâd", a galluogi "Lleoliadau".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Mae ar Signal angen caniatâd Camera er mwyn atodi tynnu lluniau, ond fe\'i rwystrwyd yn barhaol. Ewch i ddewislen gosodiadau\'r ap, dewis "Caniatâd", a galluogi "Camera".</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">Llwytho cyfrwng...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Gwall chwarae sain!</string>
   <!--BlockedContactsActivity-->
@@ -508,6 +509,10 @@ Send neges heb ei ddiogelu?</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Cyflwyno cyfrinymadrodd</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Cyfrinair annilys!</string>
   <!--PlacePickerActivity-->
+  <string name="PlacePickerActivity_title">Map</string>
+  <string name="PlacePickerActivity_not_a_valid_address">Nid yw\'n Gyfeiriad dilys</string>
+  <string name="PlacePickerActivity_drop_pin">Gollwng pin</string>
+  <string name="PlacePickerActivity_accept_address">Derbyn y cyfeiriad</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Nid yw\'r fersiwn o Google Play Services rydych chi wedi\'i osod yn gweithredu\'n gywir. Ail-osodwch Google Play Services a cheisiwch eto.</string>
   <!--RatingManager-->
