--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -61,6 +61,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Το Signal χρειάζεται τα δικαιώματα Τοποθεσίας για να μπορούμε να επισυνάπτουμε τοποθεσίες, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε την \"Τοποθεσία\".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Το Signal χρειάζεται τα δικαιώματα Κάμερας για να μπορούμε να τραβάμε φωτογραφίες, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε τα \"Κάμερα\".</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">Ανέβασμα πολυμέσου…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Πρόβλημα κατά την αναπαραγωγή ήχου!</string>
   <!--BlockedContactsActivity-->
@@ -468,6 +469,10 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Καταχώρηση συνθηματικού</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Μη έγκυρο συνθηματικό!</string>
   <!--PlacePickerActivity-->
+  <string name="PlacePickerActivity_title">Χάρτης</string>
+  <string name="PlacePickerActivity_not_a_valid_address">Δεν είναι έγκυρη Διεύθυνση</string>
+  <string name="PlacePickerActivity_drop_pin">Καρφίτσωμα τοποθεσίας</string>
+  <string name="PlacePickerActivity_accept_address">Αποδοχή διεύθυνσης</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Η έκδοση των Υπηρεσιών Google Play που έχετε εγκαταστήσει δε λειτουργεί σωστά. Παρακαλούμε επανεγκαταστήστε τις Υπηρεσίες Google Play και δοκιμάστε ξανά.</string>
   <!--RatingManager-->
