--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -471,7 +471,8 @@ I suoi messaggi e le chiamate sono state disabilitate, si prega di provare e ri-
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Password non valida!</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mappa</string>
-  <string name="PlacePickerActivity_not_a_valid_address">Indirizzo non corretto</string>
+  <string name="PlacePickerActivity_not_a_valid_address">Indirizzo non valido</string>
+  <string name="PlacePickerActivity_drop_pin">Posiziona l\'indicatore</string>
   <string name="PlacePickerActivity_accept_address">Accetta indirizzo</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La versione di Google Play Services installata non funziona correttamente. Reinstallalo e riprova.</string>
