--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -447,6 +447,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">암호 확인</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">암호가 잘못됨</string>
   <!--PlacePickerActivity-->
+  <string name="PlacePickerActivity_title">지도</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">설치된 Google Play 서비스 버전은 제대로 작동하지 않습니다. Google Play 서비스를 재설치 하고 다시 시도해 주세요.</string>
   <!--RatingManager-->
