--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -82,6 +82,15 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Не удалось сохранить изображение.</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Недавние контакты</string>
+  <string name="CameraContacts_signal_contacts">Контакты Signal</string>
+  <string name="CameraContacts_signal_groups">Группы Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Вы можете поделиться максимум с %d разговорами.</string>
+  <string name="CameraContacts_select_signal_recipients">Выберите получателей Signal</string>
+  <string name="CameraContacts_no_signal_contacts">Нет контактов Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Вы можете использовать кнопку камеры, чтобы отправлять фотографии только контактам, которые являются пользователями Signal.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Не можете найти того, кого ищете?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Пригласите контакт в Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Удалить</string>
   <string name="ClearProfileActivity_remove_profile_photo">Удалить фото профиля?</string>
@@ -446,6 +455,7 @@
   <string name="MediaSendActivity_camera_unavailable">Камера недоступна.</string>
   <string name="MediaSendActivity_message_to_s">Сообщение %s</string>
   <string name="MediaSendActivity_message">Сообщение</string>
+  <string name="MediaSendActivity_select_recipients">Выберите получателей</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Вы не можете поделиться больше, чем %d элементом.</item>
     <item quantity="few">Вы не можете поделиться больше, чем %d элементами.</item>
