--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -76,6 +76,15 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">No s\'ha pogut desar la imatge.</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Contactes recents</string>
+  <string name="CameraContacts_signal_contacts">Contactes de Signal</string>
+  <string name="CameraContacts_signal_groups">Grups de Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Podeu compartir un màxim de %d converses.</string>
+  <string name="CameraContacts_select_signal_recipients">Seleccioneu els destinataris de Signal</string>
+  <string name="CameraContacts_no_signal_contacts">No hi ha contactes de Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Només podeu usar el botó de la càmera per enviar fotografies a contactes de Signal.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">No trobeu qui busqueu?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Convideu un contacte a Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Suprimeix</string>
   <string name="ClearProfileActivity_remove_profile_photo">Voleu suprimir la foto de perfil?</string>
@@ -410,6 +419,7 @@
   <string name="MediaSendActivity_camera_unavailable">Càmera no disponible</string>
   <string name="MediaSendActivity_message_to_s">Missatge per a %s</string>
   <string name="MediaSendActivity_message">Missatge</string>
+  <string name="MediaSendActivity_select_recipients">Seleccioneu destinataris</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">No podeu compartir més de %d elements.</item>
     <item quantity="other">No podeu compartir més de %d elements.</item>
