--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -61,6 +61,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal برای استفاده از سرویس مکانیاب،  نیازمند دسترسی به سرویس مکان دارد ولی این دسترسی قطع شده است. لطفا برای ادامه دادن، به بخش منوی تنظیمات برنامه رفته، \"اجازه ها\" را انتخاب کرده و گزینه ی \"مکان\" را فعال نمایید.</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal جهت گرفتن عکس نیاز به دسترسی دوربین دارد، اما به طور دائم رد شده است. لطفاً به منوی تنظیمات برنامه ها رفته، \"Permissions\" را انتخاب کرده، و \"Camera\" را فعال کنید.</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">در حال ارسال رسانه...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">خطا در پخش صوتی!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,8 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">تصویر ذخیره نشد</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_cant_find_who_youre_looking_for">نمی توانم پیدا کنم فردی را که دنبالش هستید؟</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">دعوت مخاطب برای پیوستن Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">حذف</string>
   <string name="ClearProfileActivity_remove_profile_photo">عکس پروفایل حذف شود؟</string>
@@ -410,6 +413,7 @@
   <string name="MediaSendActivity_camera_unavailable">دوربین در دسترس نیست</string>
   <string name="MediaSendActivity_message_to_s">پیام به %s </string>
   <string name="MediaSendActivity_message">پیام</string>
+  <string name="MediaSendActivity_select_recipients">گیرندگان را انتخاب کنید</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">شما نمی توانید بیش از %d آیتم را به اشتراک بگذارید.</item>
     <item quantity="other">شما نمی توانید بیش از %d آیتم را به اشتراک بگذارید.</item>
@@ -471,6 +475,10 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">ثبت کردن عبارت عبور</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">رمز معتبر نیست!</string>
   <!--PlacePickerActivity-->
+  <string name="PlacePickerActivity_title">نقشه</string>
+  <string name="PlacePickerActivity_not_a_valid_address">آدرس معتبر نیست</string>
+  <string name="PlacePickerActivity_drop_pin">پین را رها کن</string>
+  <string name="PlacePickerActivity_accept_address">تایید آدرس</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">نسخه Google Play Services نصب شده روی دستگاه شما به درستی کار نمی‌کند. لطفا از ابتدا Google Play Services را نصب کرده و دوباره تلاش کنید.</string>
   <!--RatingManager-->
@@ -546,6 +554,8 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">کدی که به %s ارسال کردیم را وارد کنید</string>
   <string name="RegistrationActivity_call">تماس</string>
   <!--RevealableMessageView-->
+  <string name="RevealableMessageView_view_photo">مشاهده عکس</string>
+  <string name="RevealableMessageView_viewed">Viewed</string>
   <string name="RevealableMessageView_photo">تصویر</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">ناموفقیت در ذخیره تغییرات تصویر</string>
@@ -605,6 +615,7 @@
   <string name="ThreadRecord_missed_call">تماس از دست رفته</string>
   <string name="ThreadRecord_media_message">پیام رسانه</string>
   <string name="ThreadRecord_sticker">استیکر</string>
+  <string name="ThreadRecord_disappearing_photo">عکس ناپدید شد</string>
   <string name="ThreadRecord_s_is_on_signal">%s در Signal است!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">پیام های نابود شونده غیر فعال شد</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">زمان پنهان شدن پیام بر روی %s تنظیم شد</string>
@@ -679,6 +690,7 @@
   <string name="MessageNotifier_mark_read">علامت گذاری به عنوان خوانده شده</string>
   <string name="MessageNotifier_media_message">پیام رسانه</string>
   <string name="MessageNotifier_sticker">استیکر</string>
+  <string name="MessageNotifier_disappearing_photo">عکس ناپدید شد</string>
   <string name="MessageNotifier_reply">پاسخ</string>
   <string name="MessageNotifier_signal_message">پیام Signal</string>
   <string name="MessageNotifier_unsecured_sms">پیامک ناامن</string>
@@ -876,7 +888,7 @@
   <string name="log_submit_activity__button_compose_email">نوشتن ایمیل</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">این گزارش به صورت آنلاین برای بازنگری مشارکت کنندگان پست خواهد شد تا بتوانند آن را ببینند، می توانید آن را قبل از ثبت بررسی کرده و ویرایش کنید.</string>
   <string name="log_submit_activity__loading_logs">بارگذاری لاگ ها...</string>
-  <string name="log_submit_activity__uploading_logs">آپلود گزارش ها...</string>
+  <string name="log_submit_activity__uploading_logs">ارسال گزارش ها...</string>
   <string name="log_submit_activity__success">موفقیت!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">کپی کردن این آدرس اینترنتی و اضافه کردن آن به گزارش موضوع یا ایمیل پشتیبانی:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">روی کلیپ بورد کپی شد</string>
