--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -82,6 +82,15 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Błąd przy zapisie obrazu.</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Ostatnie kontakty</string>
+  <string name="CameraContacts_signal_contacts">Kontakty Signal</string>
+  <string name="CameraContacts_signal_groups">Grupy Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Możesz udostępnić w maksymalnie %d konwersacjach.</string>
+  <string name="CameraContacts_select_signal_recipients">Wybierz odbiorców Signal</string>
+  <string name="CameraContacts_no_signal_contacts">Brak kontaktów Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Aby wysłać zdjęcia kontaktom Signal, możesz użyć tylko przycisku aparatu.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Nie możesz znaleźć kontaktu?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Zaproś kontakt do korzystania z Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Usuń</string>
   <string name="ClearProfileActivity_remove_profile_photo">Usunąć zdjęcie profilowe?</string>
@@ -446,6 +455,7 @@
   <string name="MediaSendActivity_camera_unavailable">Aparat niedostępny.</string>
   <string name="MediaSendActivity_message_to_s">Wiadomość do %s</string>
   <string name="MediaSendActivity_message">Wiadomość</string>
+  <string name="MediaSendActivity_select_recipients">Wybierz odbiorców</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Nie można udostępnić więcej niż %d plik multimediów.</item>
     <item quantity="few">Nie można udostępnić więcej niż %d multimediów.</item>
@@ -727,7 +737,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="MessageNotifier_reply">Odpowiedź</string>
   <string name="MessageNotifier_signal_message">Wiadomość Signal</string>
   <string name="MessageNotifier_unsecured_sms">Nieszyfrowany SMS</string>
-  <string name="MessageNotifier_you_may_have_new_messages">Możesz mieć nowe wiadomości.</string>
+  <string name="MessageNotifier_you_may_have_new_messages">Możesz mieć nowe wiadomości</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Otwórz Signal, aby zobaczyć najnowsze powiadomienia.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
