--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -81,7 +81,7 @@
   <string name="CameraContacts_signal_groups">Signal-groepen</string>
   <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Je kunt dit delen met maximaal %d gesprekken.</string>
   <string name="CameraContacts_select_signal_recipients">Selecteer ontvangers wie Signal gebruiken.</string>
-  <string name="CameraContacts_no_signal_contacts">Geen Signal-gebuikers.</string>
+  <string name="CameraContacts_no_signal_contacts">Geen Signal-gebuikers</string>
   <string name="CameraContacts_you_can_only_use_the_camera_button">Je kunt de cameraknop alleen gebruiken om foto\'s te verzenden aan Signal-gebruikers.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Kun je niet vinden waar je naar zoekt?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Nodig een contactpersoon uit om ook Signal te gebruiken</string>
